Fix sidebar display on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -126,6 +126,7 @@ p.error {
   background: var(--overlayColor);
   float: right;
   position: relative;
+  width: 175px;
   z-index: 1;
 }
 #sidebar p,
@@ -133,7 +134,6 @@ p.error {
   font-size: 0.75rem;
   height: 0;
   overflow: clip;
-  width: 150px;
 }
 #sidebar p {
   color: var(--infoColor);
@@ -147,6 +147,7 @@ p.error {
 }
 .side-item > a {
   display: none;
+  gap: 4px;
   padding: 2px 4px;
   text-decoration: none;
 }
@@ -157,10 +158,6 @@ p.error {
   font-size: 1.5rem;
   float: left;
   margin: 2px 4px 0 0;
-}
-#nusp,
-#senha {
-  width: 130px;
 }
 
 /* Menu */
@@ -271,6 +268,9 @@ td {
   #newsbar p {
     background-size: 34px 36px;
     padding: 8px 0 8px 40px;
+  }
+  .side-item > a {
+    justify-content: end;
   }
   .side-item > a > span {
     display: none;
